# slint_draw_rect

./: Cargo.toml  README.md  build.rs  main.slint  main_no_probs.slint
src/: controller.rs  dma2d_logger.rs  main.rs  slint_backend.rs
