[package]
name = "slint_draw_rect"
authors = ["David Haig"]
version = "0.1.0"
edition = "2024"

# 82f34d9 (jul 11th 2025)
# e2206b3 (jan 4th 2026)

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", rev = "82f34d9", features = [
    "compat-1-2",
    "backend-winit",
    "renderer-software",
] }
i-slint-core = { git = "https://github.com/slint-ui/slint", rev = "82f34d9", features = [
    "experimental",
] }
sdl2 = { version = "0.37.0" }
object-pool = { version = "0.6.0" }
env_logger = { version = "0.11.8" }
embassy-sync = { version = "0.6.1" }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "executor-thread",
    "arch-std",
] }
embassy-time = { version = "0.4.0", features = ["std"] }
embassy-futures = { version = "0.1.1" }
static_cell = { version = "2" }
log = "0.4"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", rev = "82f34d9" }
